--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ li {
     border: 4px solid var(--color-black);
     padding: 3.2rem;
     margin-bottom: 3.2rem;
-    /*max-width: 40rem;*/
+    max-width: 40rem;
     box-shadow: 0px 0px 0px 0px #000;
     transition: box-shadow 0.2s ease;
 }
@@ -184,13 +184,13 @@ input[type="checkbox"] {
     position: fixed;
     bottom: 0;
     right: 0;
-    margin-right: 3.2rem;
-    margin-bottom: 3.2rem;
+    margin-right: 6.4rem;
+    margin-bottom: 6.4rem;
     padding: 3.2rem;
     border: 4px solid var(--color-black);
     border-radius: 50%;
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3rem;
+    height: 3rem;
     background-color: var(--color-black);
     stroke: var(--color-white);
     box-shadow: 0px 0px 0px 0px #000;
