--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     --background-color: #FFFFFF;
     --form-background-color: #FFFFFF;
 
-    --primary-color: #2bb7f6;
+    --primary-color: #3e36d7;
 
     --text-primary-color: #1B2C39;
     --text-secondary-color: #5C656B;
-    
+
     --button-hover-color: rgba(0, 0, 0, 0.50);
-    --shadow-color: rgba(0, 0, 0, 0.87);
+    --shadow-color: #212121;
 
     --color-black: #212121;
     --color-white: #FFFFFF;
@@ -49,12 +49,13 @@ ul {
 li {
     box-sizing: border-box;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     border: 4px solid var(--color-black);
     padding: 3.2rem;
     margin-bottom: 3.2rem;
     max-width: 40rem;
+    width: 100%;
     box-shadow: 0px 0px 0px 0px #000;
     transition: box-shadow 0.2s ease;
 }
@@ -98,7 +99,7 @@ input[type="checkbox"] {
     border: 8px solid var(--color-black);
     padding: 3.2rem 3.2rem;
     text-align: center;
-    max-width: 60rem;
+    max-width: 80vw;
     margin-bottom: 6.4rem;
 }
 
@@ -112,11 +113,9 @@ input[type="checkbox"] {
 
 .todo-list {
     box-sizing: border-box;
-    margin: auto;
     list-style: none;
     padding: 0;
     display: flex;
-    flex-basis: 1;
     flex-direction: column;
     align-items: center;
 }
@@ -141,7 +140,6 @@ input[type="checkbox"] {
 }
 
 .todo-list-input {
-    width: 40vw;
     padding: 1.6rem;
     background-color: #FFF;
     border: 8px solid var(--color-black);
@@ -149,13 +147,13 @@ input[type="checkbox"] {
     font-size: 2rem;
     transition: border 0.2s ease;
     box-shadow: 0px 0px 0px 0px var(--shadow-color);
-    transition: box-shadow 0.2s ease;
-    /*margin: 6.4rem 0 6.4rem 0;*/
+    transition: border 0.2s ease, box-shadow 0.2s ease;
+    margin-bottom: 6.4rem;
 }
 
 .todo-list-input:hover {
     box-shadow: 6px 6px 0px 0px var(--shadow-color);
-    transition: box-shadow 0.2s ease;
+    transition: border 0.2s ease, box-shadow 0.2s ease;
 }
 
 .todo-list-input::placeholder {
@@ -165,10 +163,41 @@ input[type="checkbox"] {
 
 .todo-list-input:focus {
     outline: none;
+    border: 8px solid var(--primary-color);
+    transition: border 0.2s ease, box-shadow 0.2s ease;
+}
+
+.add-button {
+    width: 20rem;
+    height: 7rem;
+    font-family: "IBM Plex Sans", Arial;
+    font-size: 2rem;
+    font-weight: 600;
+    border: 8px solid var(--color-black);
+    background-color: var(--color-white);
+    color: var(--color-black);
+    box-shadow: 0px 0px 0px 0px var(--shadow-color);
+    transition: border 0.2s ease, box-shadow 0.2s ease;
+}
+
+.add-button:focus {
+    outline: none;
+    border: 8px solid var(--primary-color);
+    transition: border 0.2s ease, box-shadow 0.2s ease;
+}
+
+.add-button:hover {
+    box-shadow: 6px 6px 0px 0px var(--shadow-color);
+    transition: border 0.2s ease, box-shadow 0.2s ease;
+}
+
+.add-button:active {
+    box-shadow: none;
 }
 
 .show {
     display: flex;
+    flex-direction: column;
 }
 
 .hide {
@@ -250,7 +279,7 @@ input[type="checkbox"] {
     display: grid;
     grid-template-rows: 1fr;
     justify-content: center;
-    width: 80%;
+    width: 90%;
     max-width: 150rem;
     margin: auto;
     margin-top: 6.4rem;
@@ -260,11 +289,15 @@ input[type="checkbox"] {
     position: fixed;
     bottom: 0;
     right: 0;
-    backdrop-filter: brightness(60%) blur(4px);
+    backdrop-filter: brightness(60%) blur(4px); /* Chrome etc. */
+    -webkit-backdrop-filter: brightness(60%) blur(4px); /* Safari */
 }
 
-@media screen and (max-width: 700px) {
-    input[type="text"] {
+@media screen and (max-width: 900px) {
+    li {
+    }
+
+    .todo-list {
         font-size: 1.8rem;
     }
 
@@ -273,10 +306,30 @@ input[type="checkbox"] {
     }
 
     .sub-title {
-        font-size: 2.4rem;
+        font-size: 3rem;
+    }
+
+    .tasks-heading {
+        font-size: 3rem;
     }
 
     .todo-list-input {
-        width: 80vw;
+        font-size: 1.8rem;
     }
+
+    .empty-state-title {
+        font-size: 1.8rem;
+    }
+
+    .empty-state-desc {
+        font-size: 1.6rem;
+    }
+
+    .fab {
+        width: 2rem;
+        height: 2rem;
+        margin-right: 3.2rem;
+        margin-bottom: 3.2rem;
+    }
+
 }
