--- a/style.css
+++ b/style.css
@@ -123,18 +123,10 @@ input[type="checkbox"] {
 .delete-button {
     float: right;
     background-color: var(--color-white);
-    /*
-    border-bottom: 4px solid var(--color-white);
-    transition: border-bottom 0.3s ease;
-    */
     transition: opacity 0.2s ease;
 }
 
 .delete-button:hover {
-    /*
-    border-bottom: 4px solid var(--black);
-    transition: border-bottom 0.3s ease;
-    */
     opacity: 50%;
     transition: opacity 0.2s ease;
 }
@@ -332,4 +324,26 @@ input[type="checkbox"] {
         margin-bottom: 3.2rem;
     }
 
+    #main-div {
+        margin-top: 3.2rem;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .title {
+        font-size: 4rem;
+    }
+
+    .sub-title {
+        font-size: 2.6rem;
+    }
+
+    .tasks-heading {
+        font-size: 2.6rem;
+    }
+
+    .fab {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
 }
