--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ input[type="checkbox"] {
 }
 
 .todo-list-input {
+    max-width: 80vw;
     padding: 1.6rem;
     background-color: #FFF;
     border: 8px solid var(--color-black);
@@ -337,13 +338,33 @@ input[type="checkbox"] {
     .sub-title {
         font-size: 2.6rem;
     }
-
+    
     .tasks-heading {
         font-size: 2.6rem;
+    }
+
+    .heading-div {
+        margin-bottom: 3.2rem;
+    }
+
+    .empty-state-title {
+        margin-top: 0;
+    }
+
+    .todo-list-input:hover {
+        box-shadow: none;
     }
 
     .fab {
         width: 1.5rem;
         height: 1.5rem;
+    }
+
+    .fab:hover {
+        box-shadow: none;
+    }
+
+    .add-button:hover {
+        box-shadow: none;
     }
 }
