--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ input[type="checkbox"] {
     font-family: "IBM Plex Mono", Arial;
     color: var(--text-primary-color);
     border: 8px solid var(--color-black);
-    padding: 3.2rem 3.2rem;
+    padding: 3.2rem;
     text-align: center;
     max-width: 80vw;
     margin-bottom: 6.4rem;
@@ -287,9 +287,6 @@ input[type="checkbox"] {
 }
 
 @media screen and (max-width: 900px) {
-    li {
-    }
-
     .todo-list {
         font-size: 1.8rem;
     }
@@ -341,14 +338,12 @@ input[type="checkbox"] {
     
     .tasks-heading {
         font-size: 2.6rem;
+        margin-bottom: 3.2rem;
     }
 
     .heading-div {
         margin-bottom: 3.2rem;
-    }
-
-    .empty-state-title {
-        margin-top: 0;
+        padding: 1.6rem;
     }
 
     .todo-list-input:hover {
@@ -362,9 +357,14 @@ input[type="checkbox"] {
 
     .fab:hover {
         box-shadow: none;
+        transform: none;
     }
 
     .add-button:hover {
+        box-shadow: none;
+    }
+
+    li:hover {
         box-shadow: none;
     }
 }
