--- a/style.css
+++ b/style.css
@@ -114,7 +114,8 @@ input[type="checkbox"] {
 .todo-list {
     box-sizing: border-box;
     list-style: none;
-    padding: 0;
+    margin: none;
+    padding: none;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -366,5 +367,9 @@ input[type="checkbox"] {
 
     li:hover {
         box-shadow: none;
+    }
+
+    .delete-button:hover {
+        opacity: 1;
     }
 }
