Fix padding bug

--- a/style.css
+++ b/style.css
@@ -114,8 +114,8 @@ input[type="checkbox"] {
 .todo-list {
     box-sizing: border-box;
     list-style: none;
-    margin: none;
-    padding: none;
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
