--- a/style.css
+++ b/style.css
@@ -330,40 +330,35 @@ input[type="checkbox"] {
 
 @media screen and (max-width: 580px) {
     .title {
+        font-size: 4rem;
         margin-right: 0;
     }
 
     .sub-title {
+        font-size: 2.6rem;
         display: block;
-    }
-}
-
-@media screen and (max-width: 450px) {
-    .title {
-        font-size: 4rem;
-    }
-
-    .sub-title {
-        font-size: 2.6rem;
-    }
-    
-    .tasks-heading {
-        font-size: 2.6rem;
-        margin-bottom: 1.6rem;
     }
 
     .heading-div {
         margin-bottom: 3.2rem;
         padding: 1.6rem;
+        width: 100%;
     }
 
-    .todo-list-input:hover {
-        box-shadow: none;
+    .tasks-heading {
+        font-size: 2.6rem;
+        margin-bottom: 1.6rem;
     }
 
     .fab {
         width: 1.5rem;
         height: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .todo-list-input:hover {
+        box-shadow: none;
     }
 
     .fab:hover {
