--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ input[type="checkbox"] {
     .heading-div {
         margin-bottom: 3.2rem;
         padding: 1.6rem;
-        width: 100%;
+        width: 80vw;
     }
 
     .tasks-heading {
