--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
     --color-black: #212121;
     --color-white: #FFFFFF;
     --color-red: #f53d5a;
-
-
+    --color-black-opaque: rgba(0, 0, 0, 0);
 }
+
 
 html {
     font-size: 62.5%;
@@ -266,7 +266,7 @@ input[type="checkbox"] {
 
 .strong-text {
     color: var(--text-primary-color);
-    font-weight: 600;
+    font-weight: 700;
 }
 
 #main-div {
@@ -317,8 +317,6 @@ input[type="checkbox"] {
     }
 
     .fab {
-        width: 2rem;
-        height: 2rem;
         margin-right: 3.2rem;
         margin-bottom: 3.2rem;
     }
@@ -329,6 +327,10 @@ input[type="checkbox"] {
 }
 
 @media screen and (max-width: 580px) {
+    li {
+        max-width: 25rem;
+    }
+
     .title {
         font-size: 4rem;
         margin-right: 0;
@@ -355,8 +357,7 @@ input[type="checkbox"] {
     }
 
     .fab {
-        width: 1.5rem;
-        height: 1.5rem;
+        padding: 1.6rem;
     }
 }
 
