--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ ul {
 }
 
 li {
+    color: var(--text-primary-color);
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
@@ -82,14 +83,14 @@ input[type="checkbox"] {
     display: inline;
     font-size: 7.2rem;
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
     margin: 0 1.6rem 0 0;
 }
 
 .sub-title {
     display: inline;
     font-size: 3.6rem;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .heading-div {
@@ -105,6 +106,7 @@ input[type="checkbox"] {
 .tasks-heading {
     font-family: "IBM Plex Serif", Arial;
     font-size: 3.6rem;
+    color: var(--text-primary-color);
     margin-bottom: 3.2rem;
     text-transform: uppercase;
     text-align: center;
@@ -158,7 +160,7 @@ input[type="checkbox"] {
     outline: none;
     border: 8px solid var(--primary-color);
     transition: border 0.2s ease, box-shadow 0.2s ease;
-}
+}   
 
 .add-button {
     width: 20rem;
@@ -168,7 +170,7 @@ input[type="checkbox"] {
     font-weight: 600;
     border: 8px solid var(--color-black);
     background-color: var(--color-white);
-    color: var(--color-black);
+    color: var(--text-primary-color);
     box-shadow: 0px 0px 0px 0px var(--shadow-color);
     transition: border 0.2s ease, box-shadow 0.2s ease;
 }
@@ -304,6 +306,10 @@ input[type="checkbox"] {
     }
 
     .todo-list-input {
+        font-size: 1.8rem;
+    }
+
+    .add-button {
         font-size: 1.8rem;
     }
 
