Change text primary and text secondary color in dark mode

--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@
     --accent-color: #64FFDA;
 
     /* Dark text colors */
-    --text-primary-color: #D2D5E7;
-    --text-secondary-color: #9FA1AC;
+    --text-primary-color: #DBDCE3;
+    --text-secondary-color: #9FA0A8;
 
     /* Dark component colors */
     --button-hover-color: rgba(255, 255, 255, 0.5);
