--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     --add-button-background-color-active: #FFFFFF;
     --del-button-background-color: #FFFFFF;
     --del-button-background-color-prominent: #FFFFFF;
+    --empty-state-icon-background-color: #FFFFFF;
 
     /* Light primary and secondary colors */
     --primary-color: #003ce4;
@@ -54,10 +55,11 @@
     --add-button-background-color-active: #474E75;
     --del-button-background-color: rgba(0, 0, 0, 0);
     --del-button-background-color-prominent: #25262E;
+    --empty-state-icon-background-color: #1B1D25;
 
     /* Dark primary and secondary colors */
     --primary-color: #9baaff;
-    --accent-color: #64FFDA;
+    --accent-color: #c5cbff;
 
     /* Dark text colors */
     --text-primary-color: #DBDCE3;
@@ -68,7 +70,7 @@
     --shadow-color: rgba(0, 0, 0, 0);
     --fab-primary-color: #9baaff;
     --fab-stroke-color-hovered: #212121;
-    --fab-border-color-hovered: #64FFDA;
+    --fab-border-color-hovered: #c5cbff;
     --delete-button-color: #D2D5E7;
     --list-border-hover-color: #9baaff;
 
@@ -109,12 +111,6 @@ form {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-ul {
-    font-family: "IBM Plex Sans", Arial;
-    font-size: 2rem;
-    width: 100%;
 }
 
 li {
@@ -172,24 +168,23 @@ input[type="checkbox"] {
 .heading-div {
     font-family: "IBM Plex Mono", Arial;
     color: var(--text-primary-color);
-    border: 8px solid var(--color-black);
-    padding: 3.2rem;
     text-align: center;
-    max-width: 80vw;
-    margin-bottom: 6.4rem;
+    margin-bottom: 12.8rem;
 }
 
 .tasks-heading {
     font-family: "IBM Plex Serif", Arial;
     font-size: 3.6rem;
     color: var(--text-primary-color);
-    margin-bottom: 3.2rem;
+    margin: 0 0 3.2rem 0;
     text-transform: uppercase;
     text-align: center;
 }
 
 .todo-list {
-    box-sizing: border-box;
+    font-family: "IBM Plex Sans", Arial;
+    font-size: 2rem;
+    width: 100%;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -298,9 +293,8 @@ input[type="checkbox"] {
     background-color: var(--fab-primary-color);
     stroke: var(--color-white);
     box-shadow: 0px 0px 0px 0px #000;
-    transition: box-shadow 0.2s ease, transform 0.2s ease,
-                background-color 0.2s ease, stroke 0.2s ease,
-                border 0.2s ease;
+    transition: box-shadow 0.2s ease, background-color 0.2s ease, stroke 0.2s ease,
+                border 0.2s ease, margin-bottom 0.2s ease;
 }
 
 .fab:hover {
@@ -308,10 +302,9 @@ input[type="checkbox"] {
     background-color: var(--accent-color);
     stroke: var(--fab-stroke-color-hovered);
     border: 4px solid var(--fab-border-color-hovered);
-    transform: translate(0px, -8px);
-    transition: box-shadow 0.2s ease, transform 0.2s ease,
-                background-color 0.2s ease, stroke 0.2s ease,
-                border 0.2s ease;
+    margin-bottom: 7.2rem;
+    transition: box-shadow 0.2s ease, background-color 0.2s ease, stroke 0.2s ease,
+                border 0.2s ease, margin-bottom 0.2s ease;
 }
 
 .empty-state {
@@ -345,7 +338,7 @@ input[type="checkbox"] {
 }
 
 .icon-rect-fill {
-    fill: var(--color-white);
+    fill: var(--empty-state-icon-background-color);
 }
 
 .icon-rect-outline {
@@ -410,7 +403,7 @@ input[type="checkbox"] {
     width: 90%;
     max-width: 150rem;
     margin: auto;
-    margin-top: 6.4rem;
+    margin-top: 3.2rem;
 }
 
 #todo-list-form {
@@ -457,6 +450,10 @@ input[type="checkbox"] {
     .fab {
         margin-right: 3.2rem;
         margin-bottom: 3.2rem;
+    }
+
+    .fab:hover {
+        margin-bottom: 4rem;
     }
 
     .color-mode_btn {
@@ -516,7 +513,7 @@ input[type="checkbox"] {
 
     .fab:hover {
         box-shadow: none;
-        transform: none;
+        margin-bottom: 3.2rem;
         background-color: var(--color-black);
         fill: var(--color-white);
     }
@@ -531,5 +528,36 @@ input[type="checkbox"] {
 
     .delete-button:hover {
         opacity: 1;
+    }
+}
+
+@media screen and (max-height: 900px) {
+    .heading-div {
+        margin-bottom: 6.4rem;
+    }
+}
+
+/* Two column layout for wider screens */
+@media screen and (min-width: 900px) {
+    li {
+        width: 45%;
+    }
+    .todo-list {
+        width: 70%;
+        margin: auto;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+}
+
+/* Three column layout for massive screens */
+@media screen and (min-width: 1400px) {
+    li {
+        width: 28%;
+    }
+
+    .todo-list {
+        width: 80%;
     }
 }
