--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ input[type="checkbox"] {
     font-family: "IBM Plex Mono", Arial;
     color: var(--text-primary-color);
     text-align: center;
-    margin-bottom: 12.8rem;
+    margin-bottom: 6.4rem;
 }
 
 .tasks-heading {
@@ -540,13 +540,16 @@ input[type="checkbox"] {
 /* Two column layout for wider screens */
 @media screen and (min-width: 900px) {
     li {
-        width: 45%;
+        flex-basis: 40%;
+        flex-grow: 1;
+        padding: 1.6rem;
+        margin: 0 1.6rem 3.2rem 1.6rem;
     }
     .todo-list {
         width: 70%;
         margin: auto;
         flex-flow: row wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: flex-start;
     }
 }
@@ -554,7 +557,8 @@ input[type="checkbox"] {
 /* Three column layout for massive screens */
 @media screen and (min-width: 1400px) {
     li {
-        width: 28%;
+        flex-basis: 28%;
+        flex-grow: 1;
     }
 
     .todo-list {
