--- a/style.css
+++ b/style.css
@@ -407,6 +407,7 @@ input[type="checkbox"] {
     display: grid;
     grid-template-rows: 1fr;
     justify-content: center;
+    justify-items: center;
     width: 90%;
     max-width: 150rem;
     margin: auto;
