--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
     --del-button-background-color: rgba(0, 0, 0, 0);
     --del-button-background-color-prominent: #25262E;
     --empty-state-icon-background-color: #1B1D25;
-    --progress-indicator-background-color: #fff09b;
+    --progress-indicator-background-color: #9baaff;
 
     /* Dark primary and secondary colors */
     --primary-color: #9baaff;
